# cv-infra-workspace

./: .dockerignore  .gitignore  .importlinter  README.md  pyproject.toml
.github/workflows/: ci.yml  verify.yml
actions/verify/: action.yml
cv_infra/: __init__.py
cv_infra/adapter/: __init__.py  adapter_schema.py  base.py
cv_infra/cli/: __init__.py  batch.py  exit_codes.py  main.py  monitor.py  publish_glue.py
cv_infra/contract/: __init__.py  adapter_schema.py  apiversion.py  envelope.py  errors.py  loader.py  models.py  schema.py  version.py
cv_infra/oracles/: __init__.py  base.py  no_collision.py  reached_goal.py
cv_infra/orchestrator/: __init__.py  allocator.py  api.py  fake_runner.py  fanout.py  models.py  monitor.py  queue.py  rollup.py  scheduler.py  serve.py  store.py  supervisor.py
cv_infra/report/: __init__.py  aggregate.py  baseline.py  github.py  matrix.py  regression.py
cv_infra/runner/: __init__.py  boot_trace.py  evaluate.py  main.py  recording.py  ros_bridge.py  sim_runtime.py  telemetry.py
cv_infra/runner/adapter/: __init__.py  base.py  ros2.py
docker/runner/: Dockerfile
docs/: version-compatibility.md
docs/deploy/: plane-sync.md
scripts/: check_plane_skew.sh
scripts/isaac_smoke/: README.md  fastdds_udp_profile.xml  headless_smoke.py  run_dds_handshake.sh  run_smoke.sh
scripts/measure/: README.md  common.sh  isaac_baseline_run.sh  observe_cv_infra_run.sh  warm_cache.sh  warm_scene.py
scripts/workstation_setup/: README.md  apt-preferences-cv-infra-nvidia-r580  common.sh  install_docker.sh  install_nvidia_toolkit.sh  provision.sh  pull_isaac.sh  realign_driver_r580.sh  register_gh_runner.sh  sudoers.d-cv-infra  test_gpu_passthrough.sh
tests/: __init__.py  oracle_plugin_fixture.py  test_adapter_schema.py  test_cli_batch.py  test_cli_exit_codes.py  test_cli_monitor.py  test_cli_report.py  test_cli_run.py  test_cli_submit_synthesis.py  test_contract_adapter_schema_p3.py  test_contract_envelope.py  test_contract_errors_p3.py  test_contract_loader_p3.py  test_contract_p2_shapes.py  test_contract_result_equivalence.py  test_contract_schema_p3.py  test_contract_version_p3.py  test_crosscut_roundtrip_gate.py  test_fixture_canonical_guard.py  test_gh_wiring_static.py  test_oracle_plugin_loader.py  test_orchestrator_allocator.py  test_orchestrator_allocator_alignment.py  test_orchestrator_api.py  test_orchestrator_control_plane.py  test_orchestrator_labels.py  test_orchestrator_monitor.py  test_orchestrator_parallel.py  test_orchestrator_persistence_p4.py  test_orchestrator_queue_store.py  test_orchestrator_report_seam.py  test_orchestrator_rest_glue.py  test_orchestrator_result_capture.py  test_orchestrator_rollup_order.py  test_orchestrator_scheduler_k.py  test_orchestrator_transport_gaps.py  test_report_baseline.py  test_report_github_renderer.py  test_report_matrix.py  test_report_regression.py  (+13 more)
tests/fixtures/: custom_oracle_plugin.py  monitor_sample.json  nova_carter_warehouse_goal.yaml
