[project]
name = "cv-infra"
description = "Continuous verification infrastructure: Isaac Sim simulation gating for robot SW in CI/CD."
readme = "README.md"
requires-python = "==3.11.*"
dynamic = ["version"]
dependencies = [
    "docker==7.1.0",  # M3 supervisor spawn/teardown (lazy-imported; runner image installs --no-deps)
]

# Console script (cross-team contract — verbatim pin, do not change).
# M8 implements `def main() -> int` (exit-code) at cv_infra/cli/main.py.
[project.scripts]
cv-infra = "cv_infra.cli.main:main"

# Dev toolchain — exact-pinned for local/CI parity (decision 2026-06-24 env-reproducibility §4).
# uv installs this group by default on `uv sync`.
[dependency-groups]
dev = [
    "ruff==0.15.19",
    "black==26.5.1",
    "pytest==9.1.1",
    "import-linter==2.12",
]

[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

# Single source of truth for the version = cv_infra/__init__.py (__version__).
[tool.hatch.version]
path = "cv_infra/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["cv_infra"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]
