[project]
name = "cv-infra"
description = "Continuous verification infrastructure: Isaac Sim simulation gating for robot SW in CI/CD."
readme = "README.md"
requires-python = "==3.11.*"
dynamic = ["version"]
# Runtime deps — exact-pinned (CLAUDE.md §2-7). Host-side control plane only;
# both are lazy-imported (runner image installs the wheel --no-deps and never
# imports them — DoD-P2-12).
dependencies = [
    "docker==7.1.0",  # M3 supervisor spawn/teardown
    "pyyaml==6.0.2",  # M8 CLI scenario loading (`cv-infra run`; --help stays dependency-free)
    # M1 Phase-3 contract models (schema/loader/version — lazy-exported so
    # `import cv_infra.contract` stays stdlib-only). Consumed on BOTH planes
    # (D-4', decisions/2026-07-10-p3-consume-decisions.md): host/CLI via this
    # pin, runner via the kit-prebundled pydantic — the wheel still installs
    # --no-deps; docker/runner/Dockerfile's BUNDLE_SUPPLIED guard asserts the
    # bundled version equals this pin at build time.
    # BUNDLE-ALIGNED PIN (PM ruling, decisions/2026-07-10-p3-entry-decisions.md
    # D-1 ruling): the image #5 kit-prebundled interpreter already ships
    # pydantic 2.11.7 / pydantic_core 2.33.2 (T1 probe measurement,
    # ~/cv-infra-p2-out/p3c1/probe/bundled-pydantic.txt) — the host pin matches
    # it so contract validation semantics/error prose never skew across planes.
    "pydantic==2.11.7",
    # M3 scheduler NVML 2nd guard (REQ-ORCH-005, LOCKED §7.4) — lazy-imported
    # inside PynvmlVramGauge so GPU-free hosts import cleanly. Control plane
    # runs in the host venv only (no kit-bundle alignment concern, G-27);
    # pinned to the current PyPI stable (2026-06-01 release).
    "nvidia-ml-py==13.610.43",
    # M3 REST submit surface (api.py — REQ-INTAKE-001, M3 §2.1 Reuse). Host
    # venv only (no kit-bundle alignment concern, G-27); fastapi 0.139.0
    # declares pydantic>=2.9.0 — compatible with the bundle-aligned 2.11.7 pin
    # above (uv lock re-checks the constraint). uvicorn is the P5 compose
    # server; nothing in cv_infra imports it yet (resident deployment = P5).
    "fastapi==0.139.0",
    "uvicorn==0.51.0",
]

# Console script (cross-team contract — verbatim pin, do not change).
# M8 implements `def main() -> int` (exit-code) at cv_infra/cli/main.py.
[project.scripts]
cv-infra = "cv_infra.cli.main:main"

# Oracle plugin registry (M1 §3.6, REQ-INTAKE-007): the contract loader binds
# acceptance-criteria oracles through this entry-point group (stdlib
# importlib.metadata discovery — custom oracles register here from their own
# distribution, or are addressed by an explicit "module:Class" path).
[project.entry-points."cv_infra.oracles"]
reached_goal = "cv_infra.oracles.reached_goal:ReachedGoalOracle"
no_collision = "cv_infra.oracles.no_collision:NoCollisionOracle"

# Dev toolchain — exact-pinned for local/CI parity (decision 2026-06-24 env-reproducibility §4).
# uv installs this group by default on `uv sync`.
[dependency-groups]
dev = [
    "ruff==0.15.19",
    "black==26.5.1",
    "pytest==9.1.1",
    "import-linter==2.12",
    # starlette TestClient transport (tests/test_orchestrator_api.py) — test-only.
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

# Single source of truth for the version = cv_infra/__init__.py (__version__).
[tool.hatch.version]
path = "cv_infra/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["cv_infra"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]
